--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "gamemode-1.2.tar.xz": 29ceeccde684d2e07799f4f3d19e43e62c2c8bf8
+  "iso3166-0.9.tar.gz": 29ceeccde684d2e07799f4f3d19e43e62c2c8bf8
