--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "iso3166-0.9.tar.gz": 29ceeccde684d2e07799f4f3d19e43e62c2c8bf8
+  iso3166-1.0.tar.gz: 7eb9f7c28a6d4b6b398a8b9f871c0261b89f3803
